--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,14 @@
 ---
 # Project information
-site_name: "Home Assistant Community Add-ons"
-site_url: "https://addons.community"
-site_description: "The primary goal of this project is to provide you (as a Home Assistant user) with additional, high quality, add-ons that allow you to take your automated home to the next level."
-site_author: "Franck Nijhof"
-copyright: "Copyright 2017-2020 - Franck Nijhof."
+site_name: "My Test Add-ons"
+site_url: "https://github.com/bepsoccer/repository"
+site_description: "My Test Add-on"
+site_author: "Brad"
+copyright: "Nobody"
 
 # Repository
-repo_name: "hassio-addons"
-repo_url: "https://github.com/hassio-addons/repository"
+repo_name: "My Test Add-ons"
+repo_url: "https://github.com/bepsoccer/repository"
 edit_uri: ""
 
 # Theme configuration
