--- a/tasmoadmin/config.json
+++ b/tasmoadmin/config.json
@@ -1,9 +1,9 @@
 {
   "name": "TasmoAdmin",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "slug": "sonweb",
   "description": "Centrally manage all your Sonoff-Tasmota devices",
-  "url": "https://github.com/hassio-addons/addon-tasmoadmin",
+  "url": "https://github.com/bepsoccer/addon-tasmoadmin",
   "webui": "[PROTO:ssl]://[HOST]:[PORT:9541]",
   "startup": "system",
   "init": false,
@@ -21,10 +21,12 @@
     "ssl"
   ],
   "ports": {
-    "9541/tcp": 9541
+    "9541/tcp": 9541,
+    "9542/tcp": 9542
   },
   "ports_description": {
-    "9541/tcp": "TasmoAdmin web interface"
+    "9541/tcp": "TasmoAdmin web interface",
+    "9542/tcp": "TasmoAdmin HTTP OTA firmwares"
   },
   "options": {
     "ssl": true,
@@ -37,5 +39,5 @@
     "certfile": "str",
     "keyfile": "str"
   },
-  "image": "hassioaddons/sonweb-{arch}"
+  "image": "bepsoccer/tasmoadmin"
 }
